Step Design was reworked